samples/_failures_safe/1761721221_32f383_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_19f47f8e.c: In function ‘main’:
./samples/SAFE/__tmp_19f47f8e.c:162:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  162 |     char input
      |     ^~~~
./samples/SAFE/__tmp_19f47f8e.c:162:5: error: expected declaration or statement at end of input
